--- a/gamma.html
+++ b/gamma.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="res/gamma.css">
     <script src = "res/jquery-3.4.1.min.js"></script>
     <script src = "res/default-image.js"></script>
+    <script src = "res/convert-image.js"></script>
     <script src = "res/gamma.js"></script>
 </head>
 <body>
