Generate gAMA chunk

--- a/gamma.html
+++ b/gamma.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="res/gamma.css">
     <script src = "res/jquery-3.4.1.min.js"></script>
+    <script src = "res/crc32.js"></script>
     <script src = "res/default-image.js"></script>
     <script src = "res/color.js"></script>
     <script src = "res/converters.js"></script>
