Add palette modification GUI

--- a/gamma.html
+++ b/gamma.html
@@ -31,7 +31,8 @@
                 색 종류:
                 <input type="number" id="numinput"
                     min="1" max="256" value="6">³ =
-                <span id="numresult"></span>
+                    <span id="numresult"></span><br>
+                <input type="submit" value="팔레트 업데이트">
             </form>
             <div id="result">
             </div>
