Prevent refreshing when updating palette

--- a/gamma.html
+++ b/gamma.html
@@ -25,12 +25,9 @@
                 </span>
                 (링크를 다른이름으로 저장 or
                 이미지를 그냥 클릭하여 저장)<br>
-                <span class="warning">
-                    ※환경에 따라 안될수도 있어서,
-                    안보인다고 야짤 달리면 차단당할 수도 있음
-                </span>
+                ※환경에 따라 이미지가 그대로 보일 수 있음
                 <br>
-                ※구버전 공앱에선 원본이 이상하게 보일 수 있음
+                ※구버전 공앱에서 이상하게 보일 수 있음
             </h4>
             <h3>
                 여기에 숨길 이미지를 드래그&드롭
